...
                mainView()
            }
        }
        .alert(isPresented: $showingAlert) {
            Alert(title: Text("Something went wrong!"),
                  message: Text( alertMessageString ?? "Unknown error!!??!!"),
                  dismissButton: .default(Text("Done")))
        }
    }

    private func mainView() -> some View {
        VStack {
            baseListWithNavBarView()
...
            self.imageModels = self.dataManager.imageModels
        }
    }

    private func getTitle() -> String {
        if mainViewLevel == 0 {
            return "Starting Images"
        } else {
            return imageTags
        }
    }

    private func getBackButtonText() -> String {
...
