...
        set {
            imageTags = newValue
        }
    }

    var title: String {
        isTopMainLevel ? "Starting Images" : imageTags
    }

    var isTopMainLevel: Bool {
        mainViewLevel == 0
    }

...
